<resources>
    <string name="app_name">My Application style</string>
    <string name="search_hint">Search video game by name</string>

    <!--Menu strings-->
    <string name="settings">Settings</string>
    <string name="pref_platform_key">platform</string>
    <string name="pref_platform_value">Games of platform</string>
    <string name="pref_platform_desc_value">desc</string>
    <string name="pref_gamesOrder_desc_value">desc</string>
    <string name="pref_news_all">all</string>
    <string name="pref_news_category">news_category</string>
    <string name="pref_news_value">News category</string>
    <string name="order_desc">order_desc</string>
    <string name="pref_order_desc">desc</string>
    <string name="pref_order_asc">asc</string>
    <string name="pref_order_label">Games Order</string>
    <string name="favorites">Favorites</string>
    <string name="content_description_favorites">Option for show favorite posters games</string>
    <string name="games">Games</string>
    <string name="News">News</string>
    <string name="content_description_games">Show list of posters games from IGDB</string>
    <string name="content_description_news">All kind of news published about video games</string>
    <string name="uriCover">https://images.igdb.com/igdb/image/upload/t_cover_big/</string>
    <string name="jpg">.jpg</string>
    <string name="gameName_viewHolder">Game Name</string>


    //Config
    <string name="popularity_desc">sort popularity desc;</string>
    <string name="popularity_asc">sort popularity asc;</string>

    //search
    <string name="search_query"></string>
    <string name="videos_label"><![CDATA[Videos & Teasers]]></string>
    <string name="screenshot_label">Screenshots</string>
    <string name="reviews_label">Reviews</string>
    <string name="genre_label">Genres:</string>
    <string name="platform_label">Platforms:</string>
    <string name="member_count">Member Count</string>
    <string name="critic_rating">Critic Rating</string>
    <string name="played">Played</string>
    <string name="playing">Playing</string>
    <string name="want">want</string>
    <string name="video_label_view_holder">Videos Youtube</string>
    <string name="youtube_uri">vnd.youtube:</string>
    <string name="rating_value">0%</string>
    <string name="date_dummy_value">Month Day, Year</string>
    <string name="critic_dummy_value">User\'s Critic</string>
    <string name="review_views">" Views"</string>
    <string name="positive_points">Positive point</string>
    <string name="review_negativePoint_label">Negative Point</string>
    <string name="category">Category</string>
    <string name="feed_games_related">Feed\'s Games Related</string>
    <string name="feed_createdAt">Created At</string>
    <string name="pulse_value">Pulse Article</string>
    <string name="coming_soon_value">Coming Soon</string>
    <string name="newTrailer_value">New Trailer</string>
    <string name="user_contribuited_item_value">User Contribuited Item</string>
    <string name="user_contribuition_item_value">User Contribuitions Item</string>
    <string name="page_contributed_item_value">Page Contributed Item</string>
    <string name="you_areHere_feeds">You are in Feeds now!</string>
    <string name="you_areHere_games">You are here in Games!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="toolbar_background">https://images.igdb.com/igdb/image/upload/t_cover_big/co20uw.jpg</string>
    <string name="CDesc_youtube">Youtube Icon</string>
    <string name="CDesc_video_type">Video Type</string>
    <string name="CDesc_videoName">Name of the video</string>
    <string name="CDesc_screenshot_icon_favorite">Show the screenshot like favorite</string>
    <string name="CDesc_screenshot_number">Number of Screenshot</string>
    <string name="CDesc_screenshot_image">Screenshot image</string>
    <string name="CDesc_screenshot_cover">Cover of the game</string>
    <string name="CDesc_screenshot_game_name">Game`s Name</string>
    <string name="CDesc_review_critic_value">Value of the critic</string>
    <string name="CDesc_review_title">Review Title</string>
    <string name="CDesc_review_createAt">Date of the creation</string>
    <string name="CDesc_review_game_cover">Game Cover</string>
    <string name="CDesc_review_game_Name">Game Name in Review</string>
    <string name="CDesc_review_number">Number of reviews</string>
    <string name="CDesc_review_date_value">Date of Review</string>
    <string name="CDesc_review_content">Review Content</string>
    <string name="CDesc_review_positive">Positive Review Labal</string>
    <string name="CDesc_review_positive_value">Posotovoe Review Value</string>
    <string name="CDesc_review_negative">Negative point label</string>
    <string name="CDesc_review_negative_value">Negative point Value</string>
    <string name="CDesc_image_cover_game">Game Cover in App</string>
    <string name="CDesc_bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="CDesc_game_info_cover">Cover of the game in info</string>
    <string name="CDesc_game_info_fab_btn">Button for mark or dismark a game like favorite</string>
    <string name="CDesc_game_name">Game Name</string>
    <string name="CDesc_game_date_release">Date of Release</string>
    <string name="CDesc_game_companies">Companies involved in the development</string>
    <string name="CDesc_game_member">Number of memeber that support the game</string>
    <string name="CDesc_game_member_rating">Rating by the memebers Label</string>
    <string name="CDesc_game_member_value">Rating by the memebers</string>
    <string name="CDesc_game_genres">Genre of the Game</string>
    <string name="CDesc_game_platforms">Game Platform</string>
    <string name="CDesc_game_platforms_values">Name of the platforms support the game</string>
    <string name="CDesc_game_summary">Game Summary</string>
    <string name="CDesc_game_want_icon">Want icon</string>
    <string name="CDesc_game_want_value">Number of player that want the game</string>
    <string name="CDesc_game_want_label">Want label</string>
    <string name="CDesc_game_playing_icon">Playing icon</string>
    <string name="CDesc_game_playing_label">Playing Label</string>
    <string name="CDesc_game_playing_value">Players playing the game</string>
    <string name="CDesc_game_played_icon">Played icon</string>
    <string name="CDesc_game_played_value">Played value</string>
    <string name="CDesc_game_played_label">Played label</string>
    <string name="CDesc_game_detail_videos">Click the button for videos related with the game</string>
    <string name="CDesc_game_detail_screenshots">Click here to see screenshots of the game</string>
    <string name="CDesc_game_detail_reviews">Click here to watch reviews of the game</string>
    <string name="CDesc_game_BottomNavigation">Bottom Menu</string>
    <string name="appwidget_game_name">Game Name</string>
    <string name="appwidget_game_cover">Cover of the last game viewed</string>
    <string name="feeds_bottom_navigation">Bottom Navigation</string>
    <string name="feed_category_icon">Category of the game icon</string>
    <string name="feed_date">Review created at</string>
    <string name="Adds">Adds for free version</string>
    <string name="Wellcome">Wellcome sig in with Google to discover a great world of game content by players like you.</string>
    <string name="Wellcome_message">Wellcome message</string>
    <string name="try_again">Try Again</string>
    <string name="offline">Check your internet Connection. The app needs internet for search data of games and news.</string>
    <string name="empty_result">Empty Result. Try change the settings like platforms, categories or search again with a new search.</string>


</resources>