<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorites_bottom_option"
        android:icon="@drawable/ic_favorite_black_18dp"
        android:title="@string/favorites"
        android:contentDescription="@string/content_description_favorites"

        />

    <item
        android:id="@+id/games_bottom_option"
        android:icon="@drawable/ic_games_24px"
        android:title="@string/games"
        android:contentDescription="@string/content_description_games"

        />

    <item
        android:id="@+id/news_bottom_option"
        android:icon="@drawable/ic_new_releases_24px"
        android:title="@string/News"
        android:contentDescription="@string/content_description_news"

        />
</menu>