<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="3dp">

        <ImageView
            android:id="@+id/game_cover_review"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/CDesc_review_game_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/game_name_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/CDesc_review_game_Name"
            app:layout_constraintStart_toStartOf="@+id/game_cover"
            app:layout_constraintTop_toBottomOf="@+id/game_cover_review" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/game_name_review"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/review_number_reviews_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/CDesc_review_number"
                android:text="TextView" />

            <TextView
                android:id="@+id/review_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="TextView"
                android:contentDescription="@string/CDesc_review_date_value"
                android:gravity="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/review_content_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="10dp"
            android:contentDescription="@string/CDesc_review_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <TextView
            android:id="@+id/review_positivePoint_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/positive_points"
            android:textColor="@android:color/holo_green_dark"
            android:contentDescription="@string/CDesc_review_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_content_value" />

        <TextView
            android:id="@+id/review_positivePoint_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="10dp"
            android:contentDescription="@string/CDesc_review_positive_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_positivePoint_label" />

        <TextView
            android:id="@+id/review_negativePoint_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_negativePoint_label"
            android:textColor="@android:color/holo_red_dark"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/CDesc_review_negative"
            app:layout_constraintTop_toBottomOf="@+id/review_positivePoint_value" />

        <TextView
            android:id="@+id/review_negativePoint_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/CDesc_review_negative_value"
            app:layout_constraintTop_toBottomOf="@+id/review_negativePoint_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>