<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/ic_favorite_red_18dp"
                android:id="@+id/fab_icon_game_detail"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/game_cover"
                app:layout_constraintEnd_toEndOf="@+id/game_cover"
                app:layout_constraintTop_toTopOf="@+id/game_cover" />
        <FrameLayout
            android:id="@+id/game_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/videos_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/videos_label"
                android:contentDescription="@string/CDesc_game_detail_videos"

                />

            <Button
                android:id="@+id/screenshot_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CDesc_game_detail_screenshots"
                android:text="@string/screenshot_label" />

            <Button
                android:id="@+id/reviews_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CDesc_game_detail_reviews"
                android:text="@string/reviews_label" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@android:color/black"
            app:itemTextColor="@android:color/white"
            android:contentDescription="@string/CDesc_game_BottomNavigation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>