<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardElevation="8dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="75dp">


    <ImageView
        android:id="@+id/feed_category_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/feed_category_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/category"
        android:contentDescription="@string/feed_category_icon"
        app:layout_constraintStart_toEndOf="@+id/feed_category_icon"
        app:layout_constraintTop_toTopOf="@+id/feed_category_icon" />

    <TextView
        android:id="@+id/feed_games_related"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/feed_games_related"
        android:contentDescription="@string/feed_games_related"
        app:layout_constraintStart_toStartOf="@+id/category_value"
        app:layout_constraintTop_toBottomOf="@+id/category_value" />

    <TextView
        android:id="@+id/feed_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_createdAt"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/feed_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
