<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/review_critic_value"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/rating_value"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/CDesc_review_critic_value"
                />

            <TextView
                android:id="@+id/review_title_value"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:text="@string/critic_dummy_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/review_critic_value"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/CDesc_review_title"
                >

            </TextView>

            <TextView
                android:id="@+id/review_date_view_holder"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/date_dummy_value"
                android:contentDescription="@string/CDesc_review_createAt"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/review_critic_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/review_critic_value"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>