<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#09C"
        android:contentDescription="@string/appwidget_game_name"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold|italic"

        />

    <ImageView
        android:id="@+id/game_cover_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/appwidget_game_cover"
        android:src="@drawable/ic_games_24px">

    </ImageView>

</RelativeLayout>